--- a/src/main/resources/templates/form_horario.html
+++ b/src/main/resources/templates/form_horario.html
@@ -2,41 +2,74 @@
 <html lang="es">
   <head>
     <title>Horarios</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--StyleSheets CSS-->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!--Iconos de FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76bcb4e810.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
     <script src="/showSelector.js"></script>
 
     <!--tablas-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-  <script> 
-  function evaluar() {
-    var horaIni = document.getElementById("hora_inicio").value;
-    var horaFin = document.getElementById("hora_fin").value;
-    if(horaIni < horaFin){
-      console.log("submit form");
-      return true;
-    }else{
-      swal("Ingresar horarios válidos", "El horario de inicio debe ser de una hora anterior al horario de finalización", "warning");
-      return false;
-    }
-  }
-  </script>
+    <script>
+      function evaluar() {
+        var horaIni = document.getElementById("hora_inicio").value;
+        var horaFin = document.getElementById("hora_fin").value;
+        if (horaIni < horaFin) {
+          console.log("submit form");
+          return true;
+        } else {
+          swal(
+            "Ingresar horarios válidos",
+            "El horario de inicio debe ser de una hora anterior al horario de finalización",
+            "warning"
+          );
+          return false;
+        }
+      }
+    </script>
   </head>
   <body>
     <div class="d-flex">
@@ -107,7 +140,7 @@
                 <a class="dropdown-item" href="/admin/configuracion"
                   ><i class="fas fa-cog"></i> Configuracion</a
                 >
-               
+
                 <li class="divider"></li>
                 <li>
                   <a class="dropdown-item" href="/logout"
@@ -135,9 +168,14 @@
             method="POST"
           >
             <div class="form-group">
-              <input type="hidden" th:name="clase" th:id="clase "th:value = "${idclase}">
+              <input
+                type="hidden"
+                th:name="clase"
+                th:id="clase "
+                th:value="${idclase}"
+              />
             </div>
-            
+
             <div class="form-group">
               <input type="hidden" th:field="*{idHorario}" id="idhorario" />
             </div>
@@ -149,13 +187,13 @@
                 type="text"
                 class="form-control mr-4"
               />
-              <label class="mr-2">Dias de la semana:</label>
+              <label class="mr-2">Dia de la semana:</label>
               <select
                 type="text"
-                class="form-control selectpicker col-lg-4 "
-                multiple
+                class="form-control selectpicker col-lg-4"
                 data-live-search="true"
-                th:field="${horario.dias}"
+                th:field="${horario.dia}"
+                required
               >
                 <option
                   th:each="dia :${dias}"
@@ -167,17 +205,29 @@
             <div class="form-group form-inline">
               <label class="mr-2" for="hora_inicio">Inicio</label>
               <input
-              id="hora_inicio"
+                id="hora_inicio"
                 th:field="*{hora_inicio}"
                 type="time"
                 class="form-control mr-4"
                 required
               />
               <label class="mr-4" for="hora_fin">Hora fin</label>
-              <input th:field="*{hora_fin}" type="time" class="form-control" id="hora_fin" required />
+              <input
+                th:field="*{hora_fin}"
+                type="time"
+                class="form-control"
+                id="hora_fin"
+                required
+              />
             </div>
 
-            <button onclick="return evaluar()" type="submit" class="btn btn-primary">Guardar</button>
+            <button
+              onclick="return evaluar()"
+              type="submit"
+              class="btn btn-primary"
+            >
+              Guardar
+            </button>
           </form>
         </div>
       </div>
