--- a/src/main/resources/templates/vistas_profesor/consultar_horarios.html
+++ b/src/main/resources/templates/vistas_profesor/consultar_horarios.html
@@ -53,10 +53,30 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
   </head>
   <body>
+    <script th:inline="javascript">
+      function eval(idHorario, idProf, idClase) {
+        $.ajax({
+          url:
+            "/profesor/save_asistencia?" +
+            "idhorario=" +
+            idHorario +
+            "&idclase=" +
+            idClase +
+            "&idprof=" +
+            idProf,
+          dataType: "html",
+          success: function (response) {
+            $("#alertcontainer").html(response);
+          },
+          error: function (data) {
+            console.log("Error:", data);
+          },
+        });
+      }
+    </script>
     <div class="container-fluid">
       <div class="d-flex">
         <div class="p-2 mr-auto">
@@ -104,75 +124,58 @@
           </div>
         </nav>
       </div>
+      <!-- Este div se cargará al momento de registrar la asistencia -->
+      <div class="container pt-2" id="alertcontainer"></div>
 
       <div class="container pt-3">
-        <div class="jumbotron jumbotron-fluid">
-          <div class="container">
-            <h1
-              th:text=" 'Bienvenido, ' + ${profesor.nombreProf} + ' ' + ${profesor.apellidoProf}"
-            ></h1>
-          </div>
-        </div>
-        <button class="btn btn-primary" onclick="mostrar('x')">
-          Registrar asistencias
-        </button>
-      </div>
-
-      <div class="container pt-3">
-        <table
-          class="table table-striped table-bordered table-responsive"
-          style="display: none"
-          id="x"
-        >
+        <table class="table table-striped table-bordered table-responsive">
           <thead>
             <tr>
-              <td class="col-2">Nombre de la clase</td>
-              <td class="col-2">Deporte a practicar</td>
-              <td class="col-2">Dia de la semana</td>
-              <td class="col-2">Lugares de practica</td>
-              <td class="col-2">Registrar asistencia</td>
+              <td class="col-2">Dias de la semana</td>
+              <td class="col-2">Lugar de practica</td>
+              <td class="col-2">Hora de inicio</td>
+              <td class="col-2">Hora de finalización</td>
+              <td class="col-2">Seleccionar</td>
+              <td class="col-1">Estado</td>
             </tr>
           </thead>
           <tbody>
-            <tr th:each=" clase : ${clases}">
-              <td th:text="${clase.nombreDep}"></td>
-              <td th:text="${clase.deporte}"></td>
+            <tr th:each=" horario: ${horarios}" th:rach>
               <td>
-                <span th:each=" dia, iterStat : ${clase.dias} ">
+                <span th:each=" dia, iterStat  : ${horario.dia} ">
                   <span
-                    th:text="!${iterStat.last} ? ${dia.diaDeLaSemana} +', ' : ${dia.diaDeLaSemana}"
+                    th:text="!${iterStat.last} ? ${dia.diaDeLaSemana} + ', ' : ${dia.diaDeLaSemana} "
                   ></span>
                 </span>
               </td>
+              <td th:text="${horario.lugar}"></td>
+              <td th:text="${horario.hora_inicio}"></td>
+              <td th:text="${horario.hora_fin}"></td>
               <td>
-                <p
-                  th:each=" horario : ${clase.horarios} "
-                  th:text="${horario.lugar}"
-                ></p>
-              </td>
-
-              <td>
-                <div
-                  id="invalid horario"
-                  th:if="${noHayHorarios != null}"
-                  class="alert alert-danger"
-                  role="alert"
+                <button
+                  th:id="'selectButton-' +${horario.idHorario}"
+                  type="button"
+                  class="btn btn-success"
+                  th:attr="onclick = |eval('${horario.idHorario}','${idProfesor}' , '${idClase}')|"
                 >
-                  <label> No hay horarios disponibles </label>
-                </div>
-                <div class="d-flex align-items-stretch">
-                  <div class="p-2">
-                    <a
-                      class="btn btn-success"
-                      th:href="@{/profesor/redirect_to_horarios/} +${profesor.dniProf} +'/'+ ${clase.idClase}"
-                      data-toggle="tooltip"
-                      data-placement="top"
-                      title="Registrar asistencia"
-                    >
-                      <span class="fas fa-plus"></span>
-                    </a>
-                  </div>
-                </div>
+                  Seleccionar
+                </button>
+              </td>
+              <td
+                th:if="${asistencias[__horarioStat.index__].estadoAsistencia} == true"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="Asistencia Registrada"
+              >
+                <i class="fas fa-check-circle fa-3x"></i>
+              </td>
+              <td
+                th:if="${asistencias[__horarioStat.index__].estadoAsistencia} == false"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="Pendiente"
+              >
+                <i class="far fa-check-circle fa-3x"></i>
               </td>
             </tr>
           </tbody>
