actualizacion de registros cuando se cambia la fecha funcionando!! falta solucionar que se puedan crear varios registros para la misma fecha (pero diferente horario)

--- a/src/main/resources/templates/form_clase.html
+++ b/src/main/resources/templates/form_clase.html
@@ -136,6 +136,8 @@
             <div class="card">
               <div class="card-body">
                 <input type="hidden" th:field="*{idClase}" />
+                <input type="hidden" th:field="*{horarios}" />
+
                 <div class="row">
                   <div class="form-group form-inline p-2">
                     <label class="mr-2" for="nombre">Nombre de la Clase:</label>
