Creacion de registros de asistencia al registrar nuevo profesor

--- a/src/main/resources/templates/form_clase.html
+++ b/src/main/resources/templates/form_clase.html
@@ -137,6 +137,7 @@
               <div class="card-body">
                 <input type="hidden" th:field="*{idClase}" />
                 <input type="hidden" th:field="*{horarios}" />
+                <input type="hidden" th:field="*{profesores}" />
 
                 <div class="row">
                   <div class="form-group form-inline p-2">
