--- a/src/main/resources/templates/vistas_profesor/consultar_horarios.html
+++ b/src/main/resources/templates/vistas_profesor/consultar_horarios.html
@@ -4,10 +4,12 @@
     <title>Mis asistencias</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!--StyleSheets CSS-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
@@ -33,29 +35,7 @@
     ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
-    <script src="/js/showSelector.js"></script>
-
-    <!--tablas-->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.js"
-      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-  </head>
-  <body>
+    <script src="/showSelector.js"></script>
     <script th:inline="javascript">
       function eval(idHorario, idProf, idClase) {
         $.ajax({
@@ -77,6 +57,8 @@
         });
       }
     </script>
+  </head>
+  <body>
     <div class="container-fluid">
       <div class="d-flex">
         <div class="p-2 mr-auto">
@@ -128,7 +110,9 @@
       <div class="container pt-2" id="alertcontainer"></div>
 
       <div class="container pt-3">
-        <table class="table table-striped table-bordered table-responsive">
+        <table
+          class="table table-striped table-bordered table-responsive tabla_horarios"
+        >
           <thead>
             <tr>
               <td class="col-2">Dias de la semana</td>
