--- a/src/main/resources/templates/form_profesor.html
+++ b/src/main/resources/templates/form_profesor.html
@@ -113,6 +113,7 @@
           >
             <div class="form-group">
               <input type="hidden" th:field="*{idProf}" id="idprofesor" />
+              <input type="hidden" th:field="*{clases}" id="clases" />
             </div>
             <div class="form-group form-inline">
               <label class="mr-2" for="nombre">Nombre:</label>
